# pymer4

./: .buildinfo  .gitignore  .travis.yml  LICENSE.txt  Lmer.py  README.md  __init__.py  api.html  citation.html  codemeta.json  contributing.html  features.html  genindex.html  index.html  installation.html  meta.yaml  mkdocs.yml  new.html  objects.inv  paper.bib  paper.md  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  rfx_cheatsheet.html  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: Build.yml  Build_noarch.yml  CI.yml  Docs.yml  Install.yml  Tests.yml  conda-build.yml  manual_deploy_docs.yml  manual_release.yml  manual_upload_conda.yml  manual_upload_pypi.yml  pixi.yml  test-prerelease-install.yml
_downloads/2f5ef11b55acdc3f7cfe565f64c3e9dd/: example_01_basic_usage.ipynb
_downloads/31672caa1e5dfbc69355a6409f988161/: example_05_misc_stats.py
_downloads/68269100b7536b0394ed8e929a3575ae/: example_05_misc_stats.ipynb
_downloads/70d6b9ce5a4ead51666a28dfea75fae5/: example_03_posthoc.py
_downloads/917ffe7ddd07e7eee1cdabedcfce3a55/: example_04_simulating_data.ipynb
_downloads/947a7f50199c9e20ecc24b24c789900c/: example_04_simulating_data.py
_downloads/97b050c97268dd6fe761b7ee74f57e1d/: example_02_categorical.ipynb
_downloads/db00e21c01b8b58ae466b1e9ff23265b/: example_02_categorical.py
_downloads/e7ef29a00a8623944961d93353aaeb69/: example_03_posthoc.ipynb
_modules/: index.html
_modules/pymer4/: io.html  simulate.html  stats.html  utils.html
_modules/pymer4/models/: Lm.html  Lm2.html  Lmer.html
_sources/: api.rst.txt  citation.rst.txt  features.rst.txt  new.rst.txt  sg_execution_times.rst.txt
_sources/auto_examples/: example_01_basic_usage.rst.txt  example_02_categorical.rst.txt  example_03_posthoc.rst.txt  example_04_simulating_data.rst.txt  example_05_misc_stats.rst.txt  index.rst.txt  sg_execution_times.rst.txt
auto_examples/: example_01_basic_usage.html  example_02_categorical.html  example_03_posthoc.html  example_04_simulating_data.html  example_05_misc_stats.html  index.html  sg_execution_times.html
ci/: conda_upload.sh
conda/: conda_build_config.yaml  meta.yaml
conda_noarch/: meta.yaml
docs/: Makefile  _config.yml  _toc.yml  api.md  api.rst  categorical.rst  conf.py  contributing.md  contributing.rst  development.md  features.md  features.rst  index.md  index.rst  installation.md  installation.rst  new.md  new.rst  post_hoc.rst  rfx_cheatsheet.rst  simulate.rst  usage.rst
docs/_build/doctrees/: api.doctree  categorical.doctree  environment.pickle  index.doctree  modules.doctree  pymer4.doctree  rfx_cheatsheet.doctree  usage.doctree
docs/_build/doctrees/auto_examples/: basic_usage.doctree  continuous_models.doctree  index.doctree
docs/_build/html/: api.html  categorical.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pymer4.html  rfx_cheatsheet.html  search.html  searchindex.js  usage.html
docs/_build/html/_downloads/: basic_usage.py  continuous_models.py
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/pymer4/: models.html  utils.html
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt  pymer4.rst.txt
docs/_build/html/_sources/auto_examples/: basic_usage.rst.txt  index.rst.txt  (+1 more)
docs/_build/html/auto_examples/: basic_usage.html  continuous_models.html  index.html
docs/api/: bridge.md  config.md  expressions.ipynb  io.md  models.md  rfuncs.md  simulate.md  stats.md  tidystats.md  utils.md
docs/api/models/: glm.md  glmer.md  index.md  lm.md  lmer.md  skmer.md
docs/auto_examples/: example_01_basic_usage.ipynb  example_01_basic_usage.py  example_01_basic_usage.py.md5  example_01_basic_usage.rst  example_02_categorical.ipynb  example_02_categorical.py  example_02_categorical.py.md5  example_02_categorical.rst  example_03_posthoc.ipynb  example_03_posthoc.py  example_03_posthoc.py.md5  example_03_posthoc.rst  example_04_simulating_data.ipynb  example_04_simulating_data.py  example_04_simulating_data.py.md5  example_04_simulating_data.rst  example_05_misc_stats.ipynb  example_05_misc_stats.py  example_05_misc_stats.py.md5  example_05_misc_stats.rst  index.rst  sg_execution_times.rst
docs/contributing/: contributing.md  developing.md  extending.ipynb
docs/development/: contributing.md  design.md  extending.ipynb
docs/pages/: comingfromR.md  faqs.ipynb  installation.md  migrating.md  new.md  quickstart.ipynb  rlibs.md
docs/tidystats/: basics.ipynb  extending.ipynb  overview.md  pipes.ipynb
docs/tidystats/api/: base.md  bridge.md  broom.md  data.md  emmeans.md  janitor.md  lmerTest.md  pipes.md  stats.md  tidyverse.md
docs/tutorials/: 01_basic_usage.ipynb  01_lm.ipynb  02_categorical.ipynb  03_lmms.ipynb  03_posthoc.ipynb  04_glmms.ipynb  04_simulating_data.ipynb  05_misc_stats.ipynb  Rfuncs.ipynb  nn_mediation.ipynb
examples/: README.rst  example_01_basic_usage.py  mymodel.h5
pymer4/: __init__.py  bridge.py  config.py  expressions.py  io.py  models.py  rfuncs.py  simulate.py  stats.py  test_install.py  utils.py  version.py
pymer4/models/: Lm.py  Lm2.py  Lmer.py  __init__.py  base.py  glm.py  glmer.py  lm.py  lmer.py  models.py  skmer.py
pymer4/resources/: advertising.csv  chickweight.csv  credit.csv  penguins.csv  poker.csv  ranef_as_dataframe_correct_results.csv  sample_data.csv  sleep.csv
pymer4/tests/: conftest.py  test_bayesian_lmm.py  test_bridge.py  test_funcs.py  test_glm.py  test_glmer.py  test_io.py  test_lm.py  test_lmer.py  test_models.py  test_simulate.py  test_sklearn.py  test_stats.py  test_utils.py
pymer4/tidystats/: __init__.py  _base.py  _bridge.py  _broom.py  _data.py  _emmeans.py  _janitor.py  _lmerTest.py  _pipes.py  _stats.py  _tidyverse.py  base.py  bridge.py  broom.py  config.py  easystats.py  emmeans_lib.py  lmerTest.py  multimodel.py  plutils.py  stats.py  tables.py  tibble.py
pymer4/tidystats/pipe/: _Pipe.py  __init__.py  _base.py  _broom.py  _emmeans.py  _janitor.py  _lmerTest.py  _polars.py  _stats.py
