[project]
name = "pymer4"
requires-python = ">=3.10"
dynamic = ["version"]
authors = [
    {name = "Eshin Jolly", email = "eshin.jolly@gmail.com"},
]
description = "pymer4: all the convenience of lme4 in python"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
]
keywords = ["statistics", "multi-level-modeling", "regression", "analysis"]

dependencies = ["pandas>=2.2.0", "numpy>=2.0", "seaborn>=0.13.0", "patsy>=1.0.1", "joblib>=1.4.2", "scipy>=1.13.0", "scikit-learn>=1.4"]

[project.urls]
Homepage = "http://eshinjolly.com/pymer4/"

[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm", "hatchling"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["pymer4/tests"]

[tool.setuptools]
package-data = {"pymer4" = ["resources/*"]}

[tool.setuptools.dynamic]
version = {attr = "pymer4.version.__version__"} 

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
pymer4 = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
r-lmertest = ">=3.1_3,<4"
r-emmeans = ">=1.10.7,<2"
rpy2 = ">=3.5.11,<4"

[tool.pixi.feature.dev.dependencies]
ruff = "==0.11.0"
pytest = "*"
jupyter-book = "*"
conda-build = ">=25.1.2,<26"

[tool.pixi.feature.dev.tasks]
test-install = "python -c 'from pymer4.test_install import test_install; test_install()'"
tests = "pytest pymer4/tests/"
docs-build = "jupyter-book build docs/"
docs-clean = "jupyter-book clean docs/"
docs-preview = "open docs/_build/html/index.html"
build = "conda-build ./conda -c https://conda.anaconda.org/conda-forge --verify"
build-check = "conda-build ./conda --check"
build-output = "conda-build ./conda --output"
build-clean = "conda-build ./conda purge-all"
upload-pre = "anaconda -t $1 upload $(pixi run build-output) -l 'pre-release'"


[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }
